# qiskit-pulse-control

./: .gitignore  LICENSE  main.py  pyproject.toml  simulation.py
qiskit_pulse_control/: __init__.py  coordinate.py  json.py  magnus.py  meta.py  service.py  unified_job.py  waveform.py
scripts/: dynamics_backend.py  off_resonance.py
