[tool.poetry]
name = "qiskit-pulse-control"
version = "0.1.0"
description = ""
authors = ["Ivana <ivana.gyro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.2.4"
qiskit-ibm-runtime = "^0.31.0"
matplotlib = "^3.9.2"
pylatexenc = "^2.10"
klepto = "^0.2.6"
qiskit-aer = "^0.15.1"
qutip = "^5.0.4"
qiskit-experiments = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
