[tool.poetry]
name = "qiskit-pulse-control"
version = "0.1.0"
description = ""
authors = ["Ivana <ivana.gyro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.2.4"
qiskit-ibm-runtime = "^0.31.0"
matplotlib = "^3.9.2"
pylatexenc = "^2.10"
klepto = "^0.2.6"
qiskit-aer = "^0.15.1"
qutip = "^5.0.4"
qiskit-experiments = "^0.8.0"
numpy-quaternion = "^2024.0.3"
numba = "^0.60.0"
scipy = "^1.14.1"
qiskit-dynamics = "^0.5.1"
jax = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
